crates/arity-formatter/tests/snapshots/dcf_format__declined_malformed_line_refusal.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: err.to_string()
---
input contains 1 DCF diagnostic(s); formatter only supports parseable input
