crates/arity-formatter/tests/snapshots/dcf_format__declined_multi_record_refusal.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: err.to_string()
---
left unformatted: the file holds 2 records, not one
