crates/arity-formatter/tests/snapshots/dcf_format__deps_constraint_spacing_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Imports:
    dplyr (>= 1.0.0)
