crates/arity-formatter/tests/snapshots/dcf_format__deps_empty_value_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Suggests:
