crates/arity-formatter/tests/snapshots/dcf_format__deps_malformed_constraint_verbatim_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Imports:
    pkg (garbage)
