crates/arity-formatter/tests/snapshots/dcf_format__deps_sorted_r_first_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Depends:
    R (>= 3.5),
    MASS,
    zoo
Imports:
    cli,
    R6,
    rlang
