crates/arity-formatter/tests/snapshots/dcf_format__no_trailing_newline_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Version: 1.0
