crates/arity-formatter/tests/snapshots/dcf_format__opaque_field_preserves_lines_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Config/Needs/website: pkgdown,
    tidyverse/tidytemplate
