crates/arity-formatter/tests/snapshots/dcf_format__order_shuffled_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Title: A Thing
Version: 0.1.0
Description: Short.
License: MIT + file LICENSE
Imports:
    a,
    b
Encoding: UTF-8
