crates/arity-formatter/tests/snapshots/dcf_format__roxygen_field_inline_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Roxygen: list(markdown = TRUE)
