crates/arity-formatter/tests/snapshots/dcf_format__utf8_value_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Description: Contains a naïve ünïcode value with a 日本語 word in it.
