crates/arity-formatter/tests/snapshots/dcf_format__wrap_description_formatted.snap
---
source: crates/arity-formatter/tests/dcf_format.rs
expression: formatted
---
Package: p
Description: A long description that goes well past the usual wrapping column by
    quite a bit indeed and keeps going.
